--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
   },
   "dependencies": {
     "@thirdweb-dev/chains": "^0",
-    "@thirdweb-dev/react": "^3.14.28",
-    "@thirdweb-dev/sdk": "^3.10.47",
+    "@thirdweb-dev/react": "^3",
+    "@thirdweb-dev/sdk": "^3",
     "ethers": "^5.7.2",
     "next": "^13",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2",
     "react-dom": "^18.2",
     "react-hook-form": "^7.43.0",
-    "react-hot-toast": "^2.4.0",
-    "react-router-dom": "^6.14.2"
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
