--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@next/font": "^13.4.16",
     "@thirdweb-dev/chains": "^0",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
